[gd_scene load_steps=10 format=3 uid="uid://gs7vwxfkyw8g"]

[ext_resource type="Material" uid="uid://bj1ycvfne3vq1" path="res://scenes/grow/trees/shake.tres" id="1_qj2v1"]
[ext_resource type="Texture2D" uid="uid://cu68pjauiu0ru" path="res://assets/sproutlands/tilesets/basic_grass_biom_things.png" id="1_rlrws"]
[ext_resource type="Script" uid="uid://bbeffantdjgdq" path="res://scenes/components/component_scripts/hurt_component.gd" id="2_2gb55"]
[ext_resource type="Script" uid="uid://cmgw4hpwnpn0g" path="res://scenes/grow/trees/small_tree.gd" id="2_yyas5"]
[ext_resource type="PackedScene" uid="uid://c3yyb581n7d5m" path="res://scenes/components/damage_component.tscn" id="3_3e4wd"]
[ext_resource type="PackedScene" uid="uid://babjxq2bnwwol" path="res://scenes/components/item_drop_component.tscn" id="4_junxy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2gb55"]
atlas = ExtResource("1_rlrws")
region = Rect2(0, 0, 16, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_3e4wd"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_junxy"]
size = Vector2(6, 21)

[node name="SmallTree" type="Sprite2D"]
material = ExtResource("1_qj2v1")
position = Vector2(0, -9)
texture = SubResource("AtlasTexture_2gb55")
script = ExtResource("2_yyas5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_3e4wd")

[node name="HurtComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("2_2gb55")
tool = 3
metadata/_custom_type_script = "uid://bbeffantdjgdq"

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_junxy")
debug_color = Color(0.904162, 0.000142467, 0.750758, 0.42)

[node name="DamageComponent" parent="." instance=ExtResource("3_3e4wd")]
max_damage = 3

[node name="ItemDropComponent" parent="." instance=ExtResource("4_junxy")]

[connection signal="area_entered" from="HurtComponent" to="HurtComponent" method="_on_area_entered"]
